# LuckyMorning

./: build.gradle
app/: build.gradle  luckmorning.jks
app/debug/: app-debug.apk
app/src/androidTest/java/com/example/zhoumohan/luckymorning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/example/zhoumohan/luckymorning/: App.java  MainActivity.java
app/src/main/res/anim/: dialog_in_anim.xml  dialog_out_anim.xml
app/src/main/res/color/: tint_color_selector.xml
app/src/main/res/drawable/: circle_bubble.xml  file.xml  tint_src_selector.xml
app/src/main/res/layout/: activity_add_recor.xml  activity_base.xml  activity_image.xml  activity_main.xml  activity_map_view.xml  activity_qqbubble.xml  activity_shopping.xml  activity_start.xml  activity_start1.xml  bottom_dialog.xml  community_detail_fragment.xml  community_fragment.xml  item_coupon.xml  item_image.xml  item_message.xml  item_my.xml  item_vp.xml  item_vp1.xml  item_vp4.xml  move_view.xml
app/src/main/res/raw/: china.xml  keep.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/zhoumohan/luckymorning/: ExampleUnitTest.java
common_library/: build.gradle
common_library/src/main/: AndroidManifest.xml
common_library/src/main/java/com/example/common_library/animationPath/: AnimatorPath.java  CurvePath.java  PathEvaluator.java  Point.java
gradle/wrapper/: gradle-wrapper.properties
(+106 files in other folders)
